--- a/FitBoard/Program Modification/Program Modification.html
+++ b/FitBoard/Program Modification/Program Modification.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Navbar</title>
+        <title>Modify Program</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="Program Modification.css">
@@ -33,8 +33,8 @@
         <section>
             <div class="content" id="Home">
               <div class="info">
-                <h2>Fitboard <br><span>We Strive for fit kids not fat kids</span></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <h2>Fitboard<br><span>We Strive</span></h2>
+                <p>.</p>
                 <a href="../Home_Page/Home_Page.html" class="info-btn">Login</a>
               </div>
             </div>
