--- a/FitBoard/Program Modification/Program Modification.html
+++ b/FitBoard/Program Modification/Program Modification.html
@@ -146,9 +146,9 @@ h1 {
   </thead>  
   <tbody>  
     <tr>  
-      <td class="data"> John Doe </td>  
-      <td class="data"> johndoe@john.com </td>  
-      <td class="data"> 666-666-666 </td>  
+      <td class="data"> ex1 </td>  
+      <td class="data"> some </td>  
+      <td class="data"> a few </td>  
       <td>  
         <button class="save"> Save </button>  
         <button class="edit"> Edit </button>  
@@ -156,9 +156,9 @@ h1 {
       </td>  
     </tr>  
     <tr>  
-      <td class="data"> John Doe </td>  
-      <td class="data"> johndoe@john.com </td>  
-      <td class="data"> 666-666-666 </td>  
+      <td class="data"> ex2 </td>  
+      <td class="data"> some </td>  
+      <td class="data"> a few </td>  
       <td>  
         <button class="save"> Save </button>  
         <button class="edit"> Edit </button>  
@@ -168,9 +168,9 @@ h1 {
   </tbody>  
   <tbody>  
     <tr>  
-      <td class="data"> John Doe </td>  
-      <td class="data"> johndoe@john.com </td>  
-      <td class="data"> 666-666-666 </td>  
+      <td class="data"> ex3 </td>  
+      <td class="data"> some </td>  
+      <td class="data"> a few </td>  
       <td>  
         <button class="save"> Save </button>  
         <button class="edit"> Edit </button>  
@@ -178,9 +178,9 @@ h1 {
       </td>  
     </tr>  
     <tr>  
-      <td class="data"> John Doe </td>  
-      <td class="data"> johndoe@john.com </td>  
-      <td class="data"> 666-666-666 </td>  
+      <td class="data"> ex4 </td>  
+      <td class="data"> some </td>  
+      <td class="data"> a few </td>  
       <td>  
         <button class="save"> Save </button>  
         <button class="edit"> Edit </button>  
