--- a/FitBoard/Program Modification/Program Modification.html
+++ b/FitBoard/Program Modification/Program Modification.html
@@ -10,28 +10,127 @@
   <body>
     <table id="Program_Table">
       <thead>
-        <tr>
-          <th>Exercise</th>
+        <tr draggable="true">
+          <th>Day 1</th>
           <th>Sets</th>
           <th>Reps</th>
           <th></th>
         </tr>
-      </thead>
+      </thead>   
       <tbody>
+
+        <span class="editable" contenteditable="True">Value</span>
+
+        <span class="editable" contenteditable="True">Value</span>
+
+        <span class="editable" contenteditable="True">Value</span>
+
         <tr>
-          <td><span class="editable" contenteditable="false">642</span></td>
-          <td><span class="editable" contenteditable="false">642</span></td>
-          <td><span class="editable" contenteditable="false">742</span></td>
+          <td>Yoga</td>
+          <td></td>
+          <td></td>
           <td>
-            <button class="edit" onclick="Edit_Row(this)">Edit</button>
-            <button class="newabove" onclick="Add_New(this, 'above')">Add Exercise Above</button>
             <button class="newbelow" onclick="Add_New(this, 'below')">Add Exercise Below</button>
-            <button class="save" onclick="Save_Row(this)" style="display: none;">Save</button>
-            <button class="delete" onclick="Delete_Row(this)" style="display: none;">Delete</button>
           </td>
         </tr>
+
+        <tr>
+          <td>Pre-Hab</td>
+          <td></td>
+          <td></td>
+          <td>
+            <button class="newabove" onclick="Add_New(this, 'above')">Add Exercise Above</button>
+            <button class="newbelow" onclick="Add_New(this, 'below')">Add Exercise Below</button>
+          </td>
+        </tr>
+
+        <tr>
+          <td>Main Workout</td>
+          <td></td>
+          <td></td>
+          <td>
+            <button class="newabove" onclick="Add_New(this, 'above')">Add Exercise Above</button>
+            <button class="newbelow" onclick="Add_New(this, 'below')">Add Exercise Below</button>
+          </td>
+        </tr>
+
+        <tr>
+          <td>Stretches</td>
+          <td></td>
+          <td></td>
+          <td>
+            <button class="newabove" onclick="Add_New(this, 'above')">Add Exercise Above</button>
+          </td>
+        </tr>
+
       </tbody>
     </table>
     <script src="Program Modification.js"></script>
+
+    <script>
+      let dragSrcEl = null;
+  
+      function handleDragStart(e) {
+          this.classList.add('dragging');
+          dragSrcEl = this;
+  
+          e.dataTransfer.effectAllowed = 'move';
+          e.dataTransfer.setData('text/html', this.innerHTML);
+      }
+  
+      function handleDragOver(e) {
+          if (e.preventDefault) {
+              e.preventDefault();
+          }
+  
+          e.dataTransfer.dropEffect = 'move';
+  
+          return false;
+      }
+  
+      function handleDragEnter(e) {
+          this.classList.add('dragover');
+      }
+  
+      function handleDragLeave(e) {
+          this.classList.remove('dragover');
+      }
+  
+      function handleDrop(e) {
+          if (e.stopPropagation) {
+              e.stopPropagation(); 
+          }
+  
+          if (dragSrcEl != this) {
+              const hoveredRect = this.getBoundingClientRect();
+              const dragRect = dragSrcEl.getBoundingClientRect();
+              if (e.clientY > (hoveredRect.top + hoveredRect.height / 2)) {
+                  this.parentNode.insertBefore(dragSrcEl, this.nextSibling);
+              } else {
+                  this.parentNode.insertBefore(dragSrcEl, this);
+              }
+          }
+  
+          return false;
+      }
+  
+      function handleDragEnd(e) {
+          this.classList.remove('dragging');
+  
+          const rows = document.querySelectorAll('tr');
+          rows.forEach(row => row.classList.remove('dragover'));
+      }
+  
+      const rows = document.querySelectorAll('tr');
+      rows.forEach(row => {
+          row.addEventListener('dragstart', handleDragStart);
+          row.addEventListener('dragenter', handleDragEnter);
+          row.addEventListener('dragover', handleDragOver);
+          row.addEventListener('dragleave', handleDragLeave);
+          row.addEventListener('drop', handleDrop);
+          row.addEventListener('dragend', handleDragEnd);
+      });
+  </script>
+
   </body>
 </html>
