--- a/FitBoard/Profile/Profile.html
+++ b/FitBoard/Profile/Profile.html
@@ -130,17 +130,17 @@
                         <div id="cropperContainer" class="cropper-inner-container">
                             <img id="cropperImage" src="#" alt="Crop Image">
                         </div>
-                    </div>
-                    <div class="modal-footer">
-                        <div class="header">
+                        <div class="help-section">
                             <h3>Help</h3>
                             <p>Figure it out bozo</p>
                         </div>
+                    </div>
+                    <div class="modal-footer">
                         <button id="btnCrop">Crop</button>
                         <button class="close">Close</button>
                     </div>
                 </div>
-            </div>  
+            </div> 
 
 
             <div class="profile_picture">
