brought names up to industry standards

--- a/FitBoard/Profile/Profile.html
+++ b/FitBoard/Profile/Profile.html
@@ -30,7 +30,7 @@
             <div class="user">
                 <img src="../Images/User_Image.jpg" alt="profile picture" class="User_Image" id="userImage">
                 <div>
-                    <p class="bold">Clint&#160B</p>
+                    <p class="bold">Default&#160User</p>
                     <p>Admin</p>
                 </div>
             </div>
@@ -103,7 +103,7 @@
             </div>
 
             <div class="name">
-                <p class="bold">Borris Johnson</p>
+                <p class="bold">Default User</p>
             </div>
 
             <div class="info">
@@ -132,7 +132,7 @@
                         </div>
                         <div class="help-section">
                             <h3>Help</h3>
-                            <p>Figure it out bozo</p>
+                            <p>Drag edges of circle too resize. Drag across a blank area to draw a new circle. Move the existing circle around by dragging it's center. Press crop to save</p>
                         </div>
                     </div>
                     <div class="modal-footer">
