added indented area for notifications

--- a/FitBoard/Notifications/Notifications.html
+++ b/FitBoard/Notifications/Notifications.html
@@ -98,6 +98,11 @@
                 <h1 id="sub-heading">Notifications</h1>
                 <h3>&#160&#160Notifications</h3>      
             </div>
+
+            <div class="biography">
+                <div class="notif_container">
+                </div>
+            </div>
         </div>
 
         <script src="../Home_Page/Activite_Sidebar.js"> </script>
