--- a/FitBoard/Settings/Settings.html
+++ b/FitBoard/Settings/Settings.html
@@ -115,9 +115,14 @@
                 <h1 id="sub-heading">Settings</h1>
                 <h3>&#160&#160Settings</h3>      
             </div>
-            <div class="slidecontainer">
+            <div class="primary_scontainer">
                 Colour
-                <input type="range" min="1" max="100" value="50" class="colour_slider" id="myRange">
+                <input type="range" min="1" max="100" value="50" class="primary_colour_slider" id="myRange">
+            </div>
+
+            <div class="secondary_scontainer">
+                Colour
+                <input type="range" min="1" max="100" value="50" class="secondary_colour_slider" id="myRange">
             </div>
 
             <main id="main">
