--- a/FitBoard/Landing_Page/LandingPage.html
+++ b/FitBoard/Landing_Page/LandingPage.html
@@ -21,6 +21,7 @@
                 <li><a href="#Home">Home</a></li>
                 <li><a href="#About">About</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="../Home_Page/Home_Page.html">Staff Login</a></li>
                 <li><a href="../Home_Page/Home_Page.html">Login</a></li>
             </ul>
             <label for="nav-toggle" class="icon-burger">
