--- a/FitBoard/Settings/Settings.html
+++ b/FitBoard/Settings/Settings.html
@@ -14,23 +14,6 @@
     </head>
     <body onload="onload()">
 
-        <!--Navigation bar Code 
-        <nav>
-            <input id="nav-toggle" type="checkbox">                                                                                                     
-            <div class="logo"><img src="../Images/Logo.png" alt="logo" width="50px" height="50px">FIT<strong>BOARD</strong></div>
-            <ul class="links">
-                <li><a href="../Landing_Page/LandingPage.html">Logout</a></li>
-                <li><a href="#Dashboard">Dashboard</a></li>
-                
-            </ul>
-            <label for="nav-toggle" class="icon-burger">
-                <div class="line"></div>
-                <div class="line"></div>
-                <div class="line"></div>
-            </label>
-        </nav>
-        -->  
-
         <div class="sidebar">
 
             <div class="top">
@@ -115,14 +98,9 @@
                 <h1 id="sub-heading">Settings</h1>
                 <h3>&#160&#160Settings</h3>      
             </div>
-            <div class="primary_scontainer">
+            <div class="primary_container">
                 Colour
                 <input type="range" min="1" max="100" value="50" class="primary_colour_slider" id="myRange">
-            </div>
-
-            <div class="secondary_scontainer">
-                Colour
-                <input type="range" min="1" max="100" value="50" class="secondary_colour_slider" id="myRange">
             </div>
 
             <main id="main">
