--- a/FitBoard/Help/Help.html
+++ b/FitBoard/Help/Help.html
@@ -99,7 +99,7 @@
                 <h1 id="sub-heading">Help</h1>
                 <h3>&#160&#160Help</h3>      
             </div>
-            <div class="paragraph">
+            <div class="help_container">
                 This ia a program for weight. this does this that does that
                 contact us at 1300655506
             </div>
