help and home page are now super maintainable

--- a/FitBoard/Help/Help.html
+++ b/FitBoard/Help/Help.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
-
+<html lang="en">
     <!-- #region head (stylesheets and refs) -->
 
     <head>
+
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>FitBoard</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- External Stylesheets -->
         <link rel="stylesheet" href="Help.css">
+        <!-- Favicon -->
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
         <link rel="icon" href="../Landing_Page/favicon.ico">
+        <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
+        <!-- Boxicons -->
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+        <!-- Font Awesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
         
     </head>
@@ -44,7 +50,7 @@
             </div>
 
             <!--unordered list of all of the sidebar icons-->
-            
+
             <ul>        
                 <li>
                     <a href="../Home_Page/Home_Page.html">
