--- a/FitBoard/Home_Page/Home_Page.html
+++ b/FitBoard/Home_Page/Home_Page.html
@@ -1,118 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>FitBoard</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- External Stylesheets -->
-    <link rel="stylesheet" href="Home_Page.css">
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
-    <link rel="icon" href="../Landing_Page/favicon.ico">
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
-    <!-- Boxicons -->
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-</head>
-<body onload="onload()">
-    <!-- Sidebar -->
-    <div class="sidebar">
-        <!-- Top Bar -->
-        <div class="top">
-            <div class="logo"> 
-                <img src="../Images/Logo.png" alt="logo" width="50px" height="50px">
-                <span>FITBOARD</span>
+
+    <!-- #region head (stylesheets and refs) -->
+
+    <head>
+
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>FitBoard</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- External Stylesheets -->
+        <link rel="stylesheet" href="Home_Page.css">
+        <!-- Favicon -->
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+        <link rel="icon" href="../Landing_Page/favicon.ico">
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
+        <!-- Boxicons -->
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+        <!-- Font Awesome -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+
+    </head>
+
+    <!-- #endregion -->
+
+    <!-- #region main -->
+
+    <body onload="onload()">
+
+        <!-- #region Sidebar Navigation -->
+
+        <div class="sidebar">
+
+            <div class="top">           <!--Top of Sidebar (Logo)-->
+                <div class="logo"> 
+                    <img src="../Images/Logo.png" alt="logo" width="50px" height="50px">
+                    <span>FITBOARD</span>
+                </div>
+                <i class='bx bx-menu' id="btn"></i>
             </div>
-            <i class='bx bx-menu' id="btn"></i> <!-- Sidebar toggle button -->
+
+            <div class="user">          <!--Username and Profile-->
+                <img src="../Images/User_Image.jpg" alt="profile picture" class="User_Image" id="userImage">
+                <div>
+                    <p class="bold">Default&#160User</p>
+                    <p>Admin</p>
+                </div>
+            </div>
+
+            <!--unordered list of all of the sidebar icons-->
+            
+            <ul>        
+                <li>
+                    <a href="../Home_Page/Home_Page.html">
+                        <i class="bx bxs-grid-alt"></i>
+                        <span class="Nav_Item">Dashboard</span>
+                    </a>
+                    <span class="tooltip">Dashboard</span>
+                </li>
+                <li>
+                    <a href="../Profile/Profile.html">
+                        <i class="bx bxs-user-circle"></i>
+                        <span class="Nav_Item">Profile</span>
+                    </a>
+                    <span class="tooltip">Profile</span>
+                </li>
+                <li>
+                    <a href="../Program Modification/Program Modification.html">
+                        <i class="bx bxs-duplicate"></i>
+                        <span class="Nav_Item">Modify&#160Programs</span>
+                    </a>
+                    <span class="tooltip">Modify&#160Programs </span>
+                </li>
+                <li>
+                    <a href="../Notifications/Notifications.html">
+                        <i class="bx bxs-bell-ring"></i>
+                        <span class="Nav_Item">Notifications</span>
+                    </a>
+                    <span class="tooltip">Notifications</span>
+                </li>
+                <li>
+                    <a href="../Upload_Video/Videos.html">
+                        <i class="bx bxs-video"></i>
+                        <span class="Nav_Item">Video&#160Tutorials</span>
+                    </a>
+                    <span class="tooltip">Video&#160Tutorials</span>
+                </li>
+                <li>
+                    <a href="../Settings/Settings.html">
+                        <i class="bx bxs-cog"></i>
+                        <span class="Nav_Item">Settings</span>
+                    </a>
+                    <span class="tooltip">Settings</span>
+                </li>
+                <li>
+                    <a href="Help.html">
+                        <i class="bx bxs-help-circle"></i>
+                        <span class="Nav_Item">Help</span>
+                    </a>
+                    <span class="tooltip">Help</span>
+                </li>
+                <li>
+                    <a href="../Landing_Page/LandingPage.html">
+                        <i class="bx bxs-log-out"></i>
+                        <span class="Nav_Item">Logout</span>
+                    </a>
+                    <span class="tooltip">Logout</span>
+                </li>
+            </ul>
         </div>
-        <!-- User Profile Section -->
-        <div class="user">
-            <img src="../Images/User_Image.jpg" alt="profile picture" class="User_Image" id="userImage">
-            <div>
-                <p class="bold">Default&#160User</p>
-                <p>Admin</p>
+
+        <!-- #endregion -->
+
+        <!-- #region Page Content -->
+
+        <div class="main_content">
+            <div class="container">
+                <h1 id="sub-heading">Dashboard</h1>
+                <h1 id="main-heading">FitBoard</h1>
+                <h3>&#160&#160Dashboard</h3>      
             </div>
         </div>
 
-        <!-- Navigation Links -->
-        <ul>
-            <li>
-                <a href="Home_Page.html">
-                    <i class="bx bxs-grid-alt"></i>
-                    <span class="Nav_Item">Dashboard</span>
-                </a>
-                <span class="tooltip">Dashboard</span>
-            </li>
-            <li>
-                <a href="../Profile/Profile.html">
-                    <i class="bx bxs-user-circle"></i>
-                    <span class="Nav_Item">Profile</span>
-                </a>
-                <span class="tooltip">Profile</span>
-            </li>
-            <li>
-                <a href="../Program Modification/Program Modification.html">
-                    <i class="bx bxs-duplicate"></i>
-                    <span class="Nav_Item">Modify&#160Programs</span>
-                </a>
-                <span class="tooltip">Modify&#160Programs</span>
-            </li>
-            <li>
-                <a href="../Notifications/Notifications.html">
-                    <i class="bx bxs-bell-ring"></i>
-                    <span class="Nav_Item">Notifications</span>
-                </a>
-                <span class="tooltip">Notifications</span>
-            </li>
-            <li>
-                <a href="../Upload_Video/Videos.html">
-                    <i class="bx bxs-video"></i>
-                    <span class="Nav_Item">Video&#160Tutorials</span>
-                </a>
-                <span class="tooltip">Video&#160Tutorials</span>
-            </li>
-            <li>
-                <a href="../Settings/Settings.html">
-                    <i class="bx bxs-cog"></i>
-                    <span class="Nav_Item">Settings</span>
-                </a>
-                <span class="tooltip">Settings</span>
-            </li>
-            <li>
-                <a href="../Help/Help.html">
-                    <i class="bx bxs-help-circle"></i>
-                    <span class="Nav_Item">Help</span>
-                </a>
-                <span class="tooltip">Help</span>
-            </li>
-            <li>
-                <a href="../Landing_Page/LandingPage.html">
-                    <i class="bx bxs-log-out"></i>
-                    <span class="Nav_Item">Logout</span>
-                </a>
-                <span class="tooltip">Logout</span>
-            </li>
-        </ul>
-    </div>
+        <!-- #endregion -->
 
-    <!-- Main Content -->
-    <div class="main_content">
-        <div class="container">
-            <h1 id="sub-heading">Dashboard</h1>
-            <h1 id="main-heading">FitBoard</h1>
-            <h3>&#160&#160Dashboard</h3>      
-        </div>
-    </div>
+        <!-- #region JavaScript calls -->
 
-    <!-- External JavaScript -->
-    <script src="../Settings/darklight_mode.js"></script>
-    <script src="Activite_Sidebar.js"> </script>
-    <script src="../Profile/Profile_Pic.js"></script>
-    <script src="../Profile/Profile_Check.js"></script>
+        <script src="../Settings/darklight_mode.js"></script>
+        <script src="Activite_Sidebar.js"> </script>
+        <script src="../Profile/Profile_Pic.js"></script>
+        <script src="../Profile/Profile_Check.js"></script>
 
-</body>
+        <!-- endregion -->
+
+    </body>
+
+    <!-- #endregion -->
+
 </html>
