completely finished the settings page

--- a/FitBoard/Profile/Profile.html
+++ b/FitBoard/Profile/Profile.html
@@ -164,6 +164,8 @@
         <script src="../Settings/darklight_mode.js"> </script>
         <script src="../Profile/Profile_Pic.js"></script>
         <script src="../Profile/Profile_Check.js"></script>
+        <script src="../Settings/colour_slider.js"></script>
+        
     </body>
 
 </html>
