--- a/FitBoard/Upload_Video/Videos.html
+++ b/FitBoard/Upload_Video/Videos.html
@@ -108,7 +108,7 @@
 
     <!-- Main Content -->
     <div class="main_content">
-        <div class="container">
+        <div class="container" id="container">
             <h1 id="sub-heading">Videos</h1>
             <h1 id="main-heading">FitBoard</h1>
             <h3 id="subscript">&#160&#160Videos</h3>      
@@ -249,5 +249,7 @@
     <script src="../Profile/Profile_Check.js"></script>
     <script src="Videos.js"></script>
     <script src="Upload_Video.js"></script>
+    <script src="../Settings/colour_slider.js"></script>
+
 </body>
 </html>
