--- a/FitBoard/Help/Help.html
+++ b/FitBoard/Help/Help.html
@@ -138,6 +138,7 @@
         <script src="../Settings/darklight_mode.js"></script>
         <script src="../Profile/Profile_Pic.js"></script>
         <script src="../Profile/Profile_Check.js"></script>
+        <script src="../Settings/colour_slider.js"></script>
 
         <!-- #endregion -->
 
