--- a/FitBoard/Home_Page/Home_Page.html
+++ b/FitBoard/Home_Page/Home_Page.html
@@ -117,7 +117,7 @@
         <!-- #region Page Content -->
 
         <div class="main_content">
-            <div class="container">
+            <div class="container" id="container">
                 <h1 id="sub-heading">Dashboard</h1>
                 <h1 id="main-heading">FitBoard</h1>
                 <h3>&#160&#160Dashboard</h3>      
@@ -132,6 +132,7 @@
         <script src="Activite_Sidebar.js"> </script>
         <script src="../Profile/Profile_Pic.js"></script>
         <script src="../Profile/Profile_Check.js"></script>
+        <script src="../Settings/colour_slider.js"></script>
 
         <!-- endregion -->
 
