--- a/FitBoard/Notifications/Notifications.html
+++ b/FitBoard/Notifications/Notifications.html
@@ -108,7 +108,9 @@
         <script src="../Home_Page/Activite_Sidebar.js"> </script>
         <script src="../Settings/darklight_mode.js"></script>
         <script src="../Profile/Profile_Pic.js"></script>    
-        <script src="../Profile/Profile_Check.js"></script>   
+        <script src="../Profile/Profile_Check.js"></script>
+        <script src="../Settings/colour_slider.js"></script>
+           
     </body>
 
 </html>
