--- a/FitBoard/Settings/Settings.html
+++ b/FitBoard/Settings/Settings.html
@@ -99,8 +99,9 @@
                 <h3>&#160&#160Settings</h3>      
             </div>
             <div class="primary_container">
-                Colour
-                <input type="range" min="1" max="100" value="50" class="primary_colour_slider" id="myRange">
+                <span>Change Header Colour</span>
+                <input type="range" min="0" max="340" value="50" class="primary_colour_slider" id="myRange">
+                <button class="reset_button" id="reset_button">Reset</button>
             </div>
 
             <label class="container1">
@@ -113,10 +114,11 @@
             </label>
         </div>
 
-        <script src="darklight_mode.js"> </script>
-        <script src="../Home_Page/Activite_Sidebar.js"> </script>
+        <script src="darklight_mode.js"></script>
+        <script src="../Home_Page/Activite_Sidebar.js"></script>
         <script src="../Profile/Profile_Pic.js"></script>
         <script src="../Profile/Profile_Check.js"></script>
+        <script src="colour_slider.js"></script>
     </body>
 
 </html>
