bug fix with sidebar

--- a/FitBoard/Help/Help.html
+++ b/FitBoard/Help/Help.html
@@ -95,7 +95,7 @@
                     <span class="tooltip">Settings</span>
                 </li>
                 <li>
-                    <a href="Help.html">
+                    <a href="../Help/Help.html">
                         <i class="bx bxs-help-circle"></i>
                         <span class="Nav_Item">Help</span>
                     </a>
