--- a/FitBoard/Home_Page/Home_Page.html
+++ b/FitBoard/Home_Page/Home_Page.html
@@ -96,7 +96,7 @@
                     <span class="tooltip">Settings</span>
                 </li>
                 <li>
-                    <a href="Help.html">
+                    <a href="../Help/Help.html">
                         <i class="bx bxs-help-circle"></i>
                         <span class="Nav_Item">Help</span>
                     </a>
@@ -129,7 +129,7 @@
         <!-- #region JavaScript calls -->
 
         <script src="../Settings/darklight_mode.js"></script>
-        <script src="Activite_Sidebar.js"> </script>
+        <script src="Activite_Sidebar.js"></script>
         <script src="../Profile/Profile_Pic.js"></script>
         <script src="../Profile/Profile_Check.js"></script>
         <script src="../Settings/colour_slider.js"></script>
