--- a/FitBoard/Help/Help.html
+++ b/FitBoard/Help/Help.html
@@ -102,7 +102,7 @@
                     <span class="tooltip">Help</span>
                 </li>
                 <li>
-                    <a href="../Landing_Page/LandingPage.html">
+                    <a href="../LandingPage.html">
                         <i class="bx bxs-log-out"></i>
                         <span class="Nav_Item">Logout</span>
                     </a>
@@ -139,7 +139,25 @@
         <script src="../Profile/Profile_Pic.js"></script>
         <script src="../Profile/Profile_Check.js"></script>
         <script src="../Settings/colour_slider.js"></script>
-
+         <script>
+        function onload() {
+           
+            var accessLevel = localStorage.getItem('accessLevel');
+            var userNameElement = document.getElementById('userName');
+            var userRoleElement = document.getElementById('userRole');
+            
+            if (accessLevel === '1') {
+                userNameElement.textContent = 'Rurt Kich';
+                userRoleElement.textContent = 'Admin';
+            } else if (accessLevel === '0') {
+                var studentData = JSON.parse(localStorage.getItem('studentData'));
+                if (studentData && studentData.givenName && studentData.surname) {
+                    userNameElement.textContent = studentData.givenName + ' ' + studentData.surname;
+                    userRoleElement.textContent = 'Student';
+                }
+            }
+        }
+    </script>
         <!-- #endregion -->
 
     </body>
