Addedd Program Modification Funtionality

--- a/FitBoard/Program Modification/Program Modification.html
+++ b/FitBoard/Program Modification/Program Modification.html
@@ -75,14 +75,16 @@
         
         </tr>
 
-        <tr class = "Stretches">
+        <tr class = "Mobility">
 
-          <td><u>Stretches</u></td>
-          <td></td>
-          <td></td>
+          <td><u><span class="Editable" contenteditable="false">Moblity</span></u></td>
+          <td><span class="Editable" contenteditable="false"></span></td>
+          <td><span class="Editable" contenteditable="false"></span></td>
           
           <td>
             <button class = "New_Exercise" onclick="Add_New(this, 'above')">Add Exercise Above</button>
+            <button class="Edit" onclick="Edit_Row(this)">Edit</button>
+            <button class="Save" onclick="Save_Row(this)" style="display: none;">Save</button>
           </td>
 
         </tr>
