finished the joke

--- a/FitBoard/LandingPage.html
+++ b/FitBoard/LandingPage.html
@@ -39,7 +39,7 @@
     <div class="content" id="Home">
         <div class="info">
             <h2>Fitboard <br><span>We Strive for fit kids not fat kids</span></h2>
-            <p>Heisenberg was driving along a highway when he got pulled over by a cop. "Do you know how fast you were going?" the ops say. "No, but i know exactly where I am, Heisenberg replies."</p>
+            <p>Heisenberg was driving along a highway when he got pulled over by a cop. "Do you know how fast you were going?" the ops say. "No, but i know exactly where I am, Heisenberg replies." "You were going 100 ks over the speed limit!" the cop exlaims. "GREAT NOW I'M LOST!" Heisenber shouts. The cop then shot him 28 times in the chest.</p>
             <a href="../index.php" class="info-btn">Login</a> <!-- Updated the href attribute to point to index.php -->
         </div>
     </div>
