made message more verbose

--- a/FitBoard/LandingPage.html
+++ b/FitBoard/LandingPage.html
@@ -39,7 +39,7 @@
     <div class="content" id="Home">
         <div class="info">
             <h2>FitBoard <br><span>Nurturing healthy students since 2024</span></h2>
-            <p>Welcome to FitBoard, where we promote a healthy lifestyle tailored for SBHS students.</p>
+            <p>Welcome to FitBoard, where we promote a healthy lifestyle tailored for SBHS weights room students.</p>
             <a href="student_auth.php" class="info-btn">Student Login</a> <!-- Updated the href attribute to point to index.php -->
         </div>
     </div>
@@ -48,8 +48,15 @@
 <!-- About section code -->
 <div class="about-section" id="About">
     <h2>About FitBoard</h2>
-    <p>FitBoard is dedicated to improving the fitness and well-being of Sydney Boys High School students. We provide fitness programs and resources to help students achieve their health goals in collaboration with the Weights Room.</p>
-    <p>Our mission is to create a supportive environment where every student can thrive physically and mentally.</p>
+    <p>FitBoard is dedicated to improving the fitness and well-being of Sydney Boys High School students. 
+        We provide fitness programs and resources to help students achieve their health goals in collaboration 
+        with the Weights Room. Our mission is to create a supportive environment where every student can thrive 
+        physically and mentally. As we enter the age of technology we find that young boys are much more inclined to 
+        be less physically fit than ideal. We aim to encourage biys to work on themselves as well as a fun, interactive
+        website where they can track their progress and have discussions with their peers and teachers. Our program also
+        makes it much easier for teachers and supervisors to monitor boys and see their progress and check in on their wellbeing.
+    </p>
+    <p>Est. 2024</p>
 </div>
 
 <!-- External Links -->
