--- a/FitBoard/Program Modification/Program Modification.html
+++ b/FitBoard/Program Modification/Program Modification.html
@@ -109,23 +109,24 @@
   </div>
    <!-- #endregion -->
 
-   <div class="main_content">
-    <div class="container">
-        <h1 id="sub-heading">Modify Program</h1>
-        <h1 id="main-heading">FitBoard</h1>
-        <h3>&#160&#160Modify Program</h3>      
-    </div>
+  <div class="main_content">
+
+     <div class="container" id="container">
+          <h1 id="sub-heading">Modify Program</h1>
+          <h1 id="main-heading">FitBoard</h1>
+          <h3>&#160&#160Modify Program</h3>      
+     </div>
 
     <input type="text" class = "Program_Specification" ID = "Program_Name" placeholder="Program Name">
     <input type="number" class = "Program_Specification" ID = "Program_Sessions" placeholder="Program Sessions">
     <select name="Program Tier" class="Program_Specification" ID = "Program_Tier">
-      <option value="I_1">Induction 1</option>
-      <option value="I_2">Induction 2</option>
-      <option value="I_3">Induction 3</option>
-      <option value="P_1">Program 1</option>
-      <option value="P_2">Program 2</option>
-      <option value="P_3">Program 3</option>
-      <option value="ADV">Advanced</option>
+          <option value="I_1">Induction 1</option>
+          <option value="I_2">Induction 2</option>
+          <option value="I_3">Induction 3</option>
+          <option value="P_1">Program 1</option>
+          <option value="P_2">Program 2</option>
+          <option value="P_3">Program 3</option>
+          <option value="ADV">Advanced</option>
     </select>
     
     <div id ="Table_Container">
