added colour slider to home page

--- a/FitBoard/Home_Page/Home_Page.html
+++ b/FitBoard/Home_Page/Home_Page.html
@@ -112,7 +112,7 @@
 
     <!-- Main Content -->
     <div class="main_content">
-        <div class="container">
+        <div class="container" id="container">
             <h1 id="sub-heading">Dashboard</h1>
             <h1 id="main-heading">FitBoard</h1>
             <h3>&#160&#160Dashboard</h3>      
