--- a/FitBoard/LandingPage.html
+++ b/FitBoard/LandingPage.html
@@ -66,5 +66,9 @@
     <a href="#"><i class="fab fa-instagram"></i></a>
 </div>
 
+<P class="placeholder">
+    placeholder. delete later
+</P>
+
 </body>
 </html>
