fixed up text glitch

--- a/FitBoard/AdminDashboard/adminDashboard.html
+++ b/FitBoard/AdminDashboard/adminDashboard.html
@@ -383,7 +383,7 @@
         <div class="user">
             <img src="../Images/User_Image.jpg" alt="profile picture" class="User_Image" id="userImage">
             <div>
-                <p class="bold" id="userName">Default User</p>
+                <p class="bold" id="userName">Default&#160User</p>
                 <p id="userRole">Admin</p>
             </div>
         </div>
