--- a/FitBoard/LandingPage.html
+++ b/FitBoard/LandingPage.html
@@ -23,7 +23,7 @@
     <ul class="links">
         <li><a href="#Home">Home</a></li>
         <li><a href="#About">About</a></li>
-        <li><a href="#Contact">Contact</a></li>
+        <li><a href="#Contacts">Contact</a></li>
         <li><a href="../Home_Page/Login_Page.html">Staff Login</a></li>
         <li><a href="student_auth.php">Student Login</a></li> <!-- Updated the href attribute to point to index.php -->
     </ul>
@@ -52,23 +52,26 @@
         We provide fitness programs and resources to help students achieve their health goals in collaboration 
         with the Weights Room. Our mission is to create a supportive environment where every student can thrive 
         physically and mentally. As we enter the age of technology we find that young boys are much more inclined to 
-        be less physically fit than ideal. We aim to encourage biys to work on themselves as well as a fun, interactive
+        be less physically fit than ideal. We aim to encourage boys to work on themselves as well as a fun, interactive
         website where they can track their progress and have discussions with their peers and teachers. Our program also
         makes it much easier for teachers and supervisors to monitor boys and see their progress and check in on their wellbeing.
     </p>
+
+    <p>
+        For any further enquiries please email us at <span style="color: blue; text-decoration: underline;">officialfitboard@gmail.com</span> or contact us at <span style="color: blue; text-decoration: underline;">1300 655 506</span>
+    </p>
+    
     <p>Est. 2024</p>
+    
 </div>
 
 <!-- External Links -->
-<div class="media-icons">
+<div class="media-icons" id="Contacts">
     <a href="#"><i class="fab fa-facebook-f"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="https://x.com/FitBoardOffical"><i class="fab fa-twitter"></i></a>
     <a href="#"><i class="fab fa-instagram"></i></a>
 </div>
 
-<P class="placeholder">
-    placeholder. delete later
-</P>
 
 </body>
 </html>
