--- a/FitBoard/Notifications/TeacherNotifications.html
+++ b/FitBoard/Notifications/TeacherNotifications.html
@@ -379,12 +379,12 @@
         const userRoleElement = document.getElementById('userRole');
 
         if (accessLevel === '1') {
-            userNameElement.textContent = 'Rurt Kich';
+            userNameElement.textContent = 'Rurt&#160Kich';
             userRoleElement.textContent = 'Admin';
         } else if (accessLevel === '0') {
             const studentData = JSON.parse(localStorage.getItem('studentData'));
             if (studentData && studentData.givenName && studentData.surname) {
-                userNameElement.textContent = studentData.givenName + ' ' + studentData.surname;
+                userNameElement.textContent = studentData.givenName + '&#160' + studentData.surname;
                 userRoleElement.textContent = 'Student';
             }
         }
