--- a/FitBoard/Home_Page/Home_Page.html
+++ b/FitBoard/Home_Page/Home_Page.html
@@ -119,6 +119,7 @@
                 margin: 0;
             }
 
+        
             table {
                 width: 100%;
                 border-collapse: collapse;
@@ -293,12 +294,12 @@
             var userRoleElement = document.getElementById('userRole');
             
             if (accessLevel === '1') {
-                userNameElement.textContent = 'Rurt Kich';
+                userNameElement.textContent = 'Rurt&#160Kich';
                 userRoleElement.textContent = 'Admin';
             } else if (accessLevel === '0') {
                 var studentData = JSON.parse(localStorage.getItem('studentData'));
                 if (studentData && studentData.givenName && studentData.surname) {
-                    userNameElement.textContent = studentData.givenName + ' ' + studentData.surname;
+                    userNameElement.textContent = studentData.givenName + '&#160' + studentData.surname;
                     userRoleElement.textContent = 'Student';
                 }
             }
