--- a/FitBoard/Notifications/Notifications.html
+++ b/FitBoard/Notifications/Notifications.html
@@ -117,7 +117,7 @@
                 } else if (accessLevel === '0') {
                     var studentData = JSON.parse(localStorage.getItem('studentData'));
                     if (studentData && studentData.givenName && studentData.surname) {
-                        userNameElement.textContent = studentData.givenName + ' ' + studentData.surname;
+                        userNameElement.textContent = studentData.givenName + '&#160' + studentData.surname;
                         userRoleElement.textContent = 'Student';
                     }
                 }
