--- a/FitBoard/Notifications/StudentNotifications.html
+++ b/FitBoard/Notifications/StudentNotifications.html
@@ -267,12 +267,12 @@
     let studentID = null; // Initialize the studentID
 
     if (accessLevel === "1") {
-        userNameElement.textContent = "Kurt Rich";
+        userNameElement.textContent = "Kurt&#160Rich";
         userRoleElement.textContent = "Admin";
     } else if (accessLevel === "0") {
         var studentData = JSON.parse(localStorage.getItem("studentData"));
         if (studentData && studentData.givenName && studentData.surname) {
-            userNameElement.textContent = studentData.givenName + " " + studentData.surname;
+            userNameElement.textContent = studentData.givenName + "&#160" + studentData.surname;
             userRoleElement.textContent = "Student";
             studentID = studentData.studentId; // Assign the studentID from studentData
         }
