--- a/FitBoard/Notifications/StudentNotifications.html
+++ b/FitBoard/Notifications/StudentNotifications.html
@@ -272,7 +272,7 @@
     } else if (accessLevel === "0") {
         var studentData = JSON.parse(localStorage.getItem("studentData"));
         if (studentData && studentData.givenName && studentData.surname) {
-            userNameElement.textContent = studentData.givenName + "&#160" + studentData.surname;
+            userNameElement.textContent = studentData.givenName + '\u00A0' + studentData.surname;
             userRoleElement.textContent = "Student";
             studentID = studentData.studentId; // Assign the studentID from studentData
         }
