--- a/FitBoard/Settings/adminSettings.html
+++ b/FitBoard/Settings/adminSettings.html
@@ -35,14 +35,14 @@
             </div>
             <ul>
                 <li>
-                    <a href="../Home_Page/Home_Page.html">
+                    <a href="../Dashboard/adminDashboard.html">
                         <i class="bx bxs-grid-alt"></i>
                         <span class="Nav_Item">Dashboard</span>
                     </a>
                     <span class="tooltip">Dashboard</span>
                 </li>
                 <li>
-                    <a href="../Profile/Profile.html">
+                    <a href="../Profile/adminProfile.html">
                         <i class="bx bxs-user-circle"></i>
                         <span class="Nav_Item">Profile</span>
                     </a>
@@ -56,7 +56,7 @@
                     <span class="tooltip">Modify&#160Programs </span>
                 </li>
                 <li>
-                    <a href="../Notifications/Notifications.html">
+                    <a href="../Notifications/TeacherNotifications.html">
                         <i class="bx bxs-bell-ring"></i>
                         <span class="Nav_Item">Notifications</span>
                     </a>
@@ -70,26 +70,26 @@
                     <span class="tooltip">Video&#160Tutorials</span>
                 </li>
                 <li>
-                    <a href="Settings.html">
+                    <a href="adminSettings.html">
                         <i class="bx bxs-cog"></i>
                         <span class="Nav_Item">Settings</span>
                     </a>
                     <span class="tooltip">Settings</span>
                 </li>
                 <li>
-                    <a href="../Help/Help.html">
+                    <a href="../Help/adminHelp.html">
                         <i class="bx bxs-help-circle"></i>
                         <span class="Nav_Item">Help</span>
                     </a>
                     <span class="tooltip">Help</span>
                 </li>
                 <li>
-                    <a href="../LandingPage.html">
-                        <i class="bx bxs-log-out"></i>
-                        <span class="Nav_Item">Logout</span>
-                    </a>
-                    <span class="tooltip">Logout</span>
-                </li>
+        <a id="logoutLink" href="#" onclick="logout()">
+            <i class="bx bxs-log-out"></i>
+            <span class="Nav_Item">Logout</span>
+        </a>
+        <span class="tooltip">Logout</span>
+    </li>
             </ul>
         </div>
 
@@ -134,20 +134,7 @@
 
         <script>
             window.onload = function() {
-                var accessLevel = localStorage.getItem('accessLevel');
-                var userNameElement = document.getElementById('userName');
-                var userRoleElement = document.getElementById('userRole');
-                
-                if (accessLevel === '1') {
-                    userNameElement.textContent = 'Rurt&#160Kich';
-                    userRoleElement.textContent = 'Admin';
-                } else if (accessLevel === '0') {
-                    var studentData = JSON.parse(localStorage.getItem('studentData'));
-                    if (studentData && studentData.givenName && studentData.surname) {
-                        userNameElement.textContent = studentData.givenName + '\u00A0' + studentData.surname;
-                        userRoleElement.textContent = 'Student';
-                    }
-                }
+                checkAdminAccess();
             };
 
             function advanceSchoolYear() {
@@ -170,8 +157,33 @@
         .catch(error => console.error('Error:', error));
     }
 }
-        </script>
+
+
+// Logout button click event handler
+document.getElementById("logoutLink").addEventListener("click", function (event) {
+    event.preventDefault(); // Prevent default link behavior (navigation)
+
+    // Call logout function
+    logout();
+
+    // Optional: Redirect to logout page
+    window.location.href = this.href; // Redirect to the logout page
+});
+
+
+// Function to logout (remove student data from local storage)
+ function logout() {
+        // Clear access data from localStorage
+        localStorage.clear();
         
+        // Redirect to the PHP logout handler
+        window.location.href = "../LandingPage.html";
+
+    }
+
+        </script>
+         <script src="../adminAccessControl.js"></script>
+        <script src="../update_sidebar_role.js"></script>
         <script src="darklight_mode.js"></script>
         <script src="../Home_Page/Activite_Sidebar.js"></script>
         <script src="../Profile/Profile_Pic.js"></script>
